horizontal scroll issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
-body{
-  background-color:#F5F5F5;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+/* body{ */
   /* margin: 0 auto; */
   /* margin: 10px; */
+  
+/* } */
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  overflow-x: hidden;
+  background-color:#F5F5F5;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 0;
+    padding: 0;
+    width: 100%;
 }
